@@ -2,6 +2,7 @@ Version 0.6-1 (2011-12-06)
 o Fixed order of classes in pca.ridge
 o Made plot3d an S3 generic; added plot3d.pcaridge and plot.pcaridge
 o Added biplot.pcaridge() to draw variable vectors on a plot.pcaridge() plot
+o Added options to precision.* for greater flexibility
 
 Version 0.6-0 (2011-12-04)
 o Added plot3d.ridge() using rgl, completing the main stages in visualization methods for ridge-like problems
